# Veri-C

./: .gitignore  CMakeLists.txt  README.md
inc/: alpha.h  ast.h  check.h  dic.h  misc.h  parse.h
src/: alpha.c  ast.c  check.c  dic.c  get_type.c  parse.c  veri-alpha-main.c  veri-check-main.c  veri-parse-main.c
